--- a/about.html
+++ b/about.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Tuhoc.cc</h1>
-    <h2>sủa lần 1</h2>
-    <h2>sủa lần 2</h2>
+    <h1>about</h1>
   </body>
 </html>
